gateway-api/07-https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-route-https
  namespace: web-app
spec:
  parentRefs:
    - name: nginx-gateway
      kind: Gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - gateway.web.k8s.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /green
      backendRefs:
        - name: green-svc
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /blue
      backendRefs:
        - name: blue-svc
          port: 80
